tests/snapshots/r#mod__property__ical-24.snap
---
source: tests/mod.rs
expression: prop
---
name: X-FOO2
params: [("PARAM1", ["VAL1"]), ("PARAM2", ["VAL2"])]
value: Some("FOO;BAR")
