tests/snapshots/r#mod__property__ical-25.snap
---
source: tests/mod.rs
expression: prop
---
name: X-BAR
params: ContentLineParams([("PARAM1", ["VAL1:FOO"])])
value: Some("BAZ;BAR")
