tests/snapshots/r#mod__property__ical-27.snap
---
source: tests/mod.rs
expression: prop
---
name: X-BAZ2
params: [("PARAM1", ["VAL1"]), ("PARAM2", ["VAL2:FOO"])]
value: Some("BAZ;BAR")
