tests/snapshots/r#mod__property__ical-28.snap
---
source: tests/mod.rs
expression: prop
---
name: X-BAZ
params: ContentLineParams([("PARAM1", ["VAL1:FOO"]), ("PARAM2", ["VAL2"])])
value: Some("BAZ;BAR")
