tests/snapshots/r#mod__property__ical-31.snap
---
source: tests/mod.rs
expression: prop
---
name: PRODID
params: []
value: Some("-//Example Inc.//Example Calendar//EN")
