tests/snapshots/r#mod__property__ical-34.snap
---
source: tests/mod.rs
expression: prop
---
name: DTSTAMP
params: []
value: Some("20080205T191224Z")
