tests/snapshots/r#mod__property__ical-35.snap
---
source: tests/mod.rs
expression: prop
---
name: DTSTART
params: [("VALUE", ["DATE"])]
value: Some("20081006")
