tests/snapshots/r#mod__property__ical-36.snap
---
source: tests/mod.rs
expression: prop
---
name: SUMMARY
params: ContentLineParams([])
value: Some("Missing description value, but includes header")
