tests/snapshots/r#mod__property__ical-37.snap
---
source: tests/mod.rs
expression: prop
---
name: DESCRIPTION
params: ContentLineParams([])
value: None
