tests/snapshots/r#mod__property__ical-38.snap
---
source: tests/mod.rs
expression: prop
---
name: UID
params: []
value: Some("4088E990AD89CB3DBB484909")
