tests/snapshots/r#mod__property__ical-39.snap
---
source: tests/mod.rs
expression: prop
---
name: END
params: ContentLineParams([])
value: Some("VEVENT")
